--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Avengers</title>
-    <meta name="description" content="">
+    <meta name="description" content="Information about Avengers company and services that are provided">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -14,12 +14,14 @@
   </head>
   <body>
     <nav class="menu">
-      <a href="#home">Home.</a>
-      <a href="#services">Services.</a>
-      <a href="#portfolio">Portfolio.</a>
-      <a href="#about">About.</a>
-      <a href="#team">Team.</a>
-      <a href="#contact">Contact.</a>
+      <ul>
+        <li><a href="#home">Home.</a></li>
+        <li><a href="#services">Services.</a></li>
+        <li><a href="#portfolio">Portfolio.</a></li>
+        <li><a href="#about">About.</a></li>
+        <li><a href="#team">Team.</a></li>
+        <li><a href="#contact">Contact.</a></li>
+      </ul>
     </nav>
     <header id="home" class="header-content">
       <img class="logo circle" width="21" height="32" src="/img/tear-drop-two.svg" alt="Logo for Avengers" title="Avengers logo">
@@ -27,7 +29,7 @@
     </header>
     <main>
       <article id="services" class="services-container">
-        <h2 class="section-header white-color white-line">SERVICES</h2>
+        <h2 class="section-header white-color">SERVICES</h2>
         <p class="services-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -46,7 +48,7 @@
           </section>
         </div>
         <section class="pricing">
-          <h3 class="sub-section-header white-color white-line">PRICING TABLES</h3>
+          <h3 class="sub-section-header white-color">PRICING TABLES</h3>
           <section class="pricing-tables">
             <h4 class="pricing-header white-color">BASIC</h4>
             <ul>
@@ -206,11 +208,35 @@
 
       </article>
       <article id="about" class="about">
-        <h2 class="about-header white-line">ABOUT</h2>
+        <div class="header-container">
+          <svg height="2" width="50%">
+            <title>Line</title>
+            <desc>White line to denote section header</desc>
+            <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
+          </svg>
+          <h2 class="about-header">ABOUT</h2>
+          <svg height="2" width="50%">
+            <title>Line</title>
+            <desc>White line to denote section header</desc>
+            <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
+          </svg>
+        </div>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <section>
-          <h3 class="skills-header white-line">SKILLS</h3>
+          <div class="header-container">
+            <svg height="2" width="30%">
+              <title>Line</title>
+              <desc>Gray line to denote section header</desc>
+              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
+            </svg>
+            <h3 class="skills-header">SKILLS</h3>
+            <svg height="2" width="30%">
+              <title>Line</title>
+              <desc>Gray line to denote section header</desc>
+              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
+            </svg>
+        </div>
           <ul class="skills">
             <li>
               <h4 class="progress-header">PHOTOSHOP</h4>
@@ -248,11 +274,13 @@
           <figure>
             <img src="/img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image circle">
             <figcaption>
-              <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
-              <a href="https://twitter.com" class="social-icons icon-twitter"></a>
-              <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
-              <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
-              <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+              <ul class="social-icons">
+                <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
+                <li><a href="https://twitter.com" class="icon-twitter"></a></li>
+                <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
+                <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
+                <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+              </ul>
               <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
             </figcaption>
           </figure>
@@ -263,11 +291,13 @@
           <figure>
             <img src="/img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image circle">
             <figcaption>
-              <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
-              <a href="https://twitter.com" class="social-icons icon-twitter"></a>
-              <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
-              <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
-              <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+              <ul class="social-icons">
+                <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
+                <li><a href="https://twitter.com" class="icon-twitter"></a></li>
+                <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
+                <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
+                <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+              </ul>
               <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
             </figcaption>
           </figure>
@@ -278,11 +308,13 @@
           <figure>
             <img src="/img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image circle">
             <figcaption>
-              <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
-              <a href="https://twitter.com" class="social-icons icon-twitter"></a>
-              <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
-              <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
-              <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+              <ul class="social-icons">
+                <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
+                <li><a href="https://twitter.com" class="icon-twitter"></a></li>
+                <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
+                <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
+                <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+              </ul>
               <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
             </figcaption>
           </figure>
@@ -293,11 +325,13 @@
           <figure>
             <img src="/img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image circle">
             <figcaption>
-              <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
-              <a href="https://twitter.com" class="social-icons icon-twitter"></a>
-              <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
-              <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
-              <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+              <ul class="social-icons">
+                <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
+                <li><a href="https://twitter.com" class="icon-twitter"></a></li>
+                <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
+                <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
+                <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+              </ul>
               <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
             </figcaption>
           </figure>
@@ -320,7 +354,7 @@
         </section>
       </article>
       <article id="contact" class="contact-section section-arrows-white">
-        <h2 class="contact-section-header section-header white-color white-line">CONTACT</h2>
+        <h2 class="contact-section-header section-header white-color">CONTACT</h2>
         <p class="contact-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <form class="contact-form">
           <input type="text" name="company-name" placeholder="Company name">
@@ -339,12 +373,14 @@
       </article>
     </main>
     <footer>
-      <p>Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012<span></p>
-      <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
-      <a href="https://twitter.com" class="social-icons icon-twitter"></a>
-      <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
-      <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
-      <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
+      <p>Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012</span></p>
+        <ul class="social-icons">
+          <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
+          <li><a href="https://twitter.com" class="icon-twitter"></a></li>
+          <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
+          <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
+          <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+        </ul>
     </footer>
   </body>
 </html>
