--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <nav class="menu">
+<!--     <nav class="menu">
       <ul>
         <li><a href="#home">Home.</a></li>
         <li><a href="#services">Services.</a></li>
@@ -22,23 +22,19 @@
         <li><a href="#team">Team.</a></li>
         <li><a href="#contact">Contact.</a></li>
       </ul>
-    </nav>
+    </nav> -->
     <header id="home" class="header-content">
       <img class="logo circle" width="21" height="32" src="/img/logo-tear-drop.svg" alt="Logo for Avengers" title="Avengers logo">
       <h1 class="header-logo-text">Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong class="curve-underline">awesome</strong> mobile and websites</h1>
     </header>
     <main>
-      <section id="services" class="services-container section-arrows-white">
-        <div class="section-header-container">
+      <article id="services" class="services-container section-arrows-white">
+        <div class="header-container">
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>White line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:3" />
           </svg>
-          <h1 class="services-header">Services</h1>
+          <h1 class="primary-header-light">Services</h1>
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>White line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:3" />
           </svg>
         </div>
@@ -114,18 +110,14 @@
             </div>
           </section>
         </section>
-      </section>
+      </article>
       <article id="portfolio" class="portfolio-container section-arrows-orange">
-        <div class="section-header-container">
+        <div class="header-container">
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>Grey line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
           </svg>
-          <h1 class="portfolio-header">Portfolio</h1>
+          <h1 class="primary-header-dark">Portfolio</h1>
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>Grey line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
           </svg>
         </div>
@@ -140,6 +132,7 @@
             </figcaption>
           </figure>
           <ul class="portfolio-slider-bullets" title="slider bullets" aria-hidden="true">
+<!-- >>>>>>>>>>> Change "title" to "class", show up on hover >>>>>>> -->
             <li title="first bullet"></li>
             <li title="second bullet"></li>
             <li title="third bullet"></li>
@@ -232,16 +225,12 @@
 
       </article>
       <article id="about" class="about section-arrows-white">
-        <div class="section-header-container">
+        <div class="header-container">
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>Grey line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
           </svg>
-          <h1 class="about-header">About</h1>
+          <h1 class="primary-header-light">About</h1>
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>Grey line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
           </svg>
         </div>
@@ -250,14 +239,10 @@
         <section>
           <div class="header-container">
             <svg height="2" width="30%">
-              <title>Line</title>
-              <desc>Gray line to denote section header</desc>
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
             <h1 class="skills-sub-header">SKILLS</h1>
             <svg height="2" width="30%">
-              <title>Line</title>
-              <desc>Gray line to denote section header</desc>
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
         </div>
@@ -290,16 +275,12 @@
         </aside>
       </article>
       <article id="team" class="team section-arrows-black">
-        <div class="section-header-container">
+        <div class="header-container">
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>Grey line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
           </svg>
-          <h1 class="team-header">Team</h1>
+          <h1 class="primary-header-dark">Team</h1>
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>Grey line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
           </svg>
         </div>
@@ -390,16 +371,12 @@
         </section>
       </article>
       <article id="contact" class="contact-section section-arrows-white">
-        <div class="section-header-container">
+        <div class="header-container">
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>White line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:3" />
           </svg>
-          <h1 class="contact-header">Contact</h1>
+          <h1 class="primary-header-light">Contact</h1>
           <svg height="3" width="50%">
-             <title>Line</title>
-             <desc>White line to denote section header</desc>
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:3" />
           </svg>
         </div>
