Edit styles to bundle component
The bundle is now it's own sass file in the
components directory

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1 class="header-logo-text">Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong class="curve-underline">awesome</strong> mobile and websites</h1>
     </header>
     <main>
-      <section id="services" class="services-container section-arrows-white">
+      <article id="services" class="services-container section-arrows-white">
         <div class="section-header-container">
           <svg height="3" width="50%">
              <title>Line</title>
@@ -58,61 +58,61 @@
           </li>
         </ul>
         <section class="pricing">
-          <h1 class="sub-section-header">PRICING TABLES</h1>
-          <section class="pricing-tables">
-            <h1 class="pricing-header">BASIC</h1>
+          <h2 class="sub-section-header">Pricing Tables</h2>
+          <section class="bundle">
+            <h3>Basic</h3>
             <ul>
-              <li class="pricing-plan"><span class="pricing-cost">$5.99</span> /MONTH</li>
-              <li class="pricing-stats">3 Projects</li>
-              <li class="pricing-stats">2 Users</li>
-              <li class="pricing-stats">1 Gb</li>
-              <li class="pricing-stats">1 Calendar</li>
+              <li class="bundle-plan"><span>$5.99</span> /MONTH</li>
+              <li>3 Projects</li>
+              <li>2 Users</li>
+              <li>1 Gb</li>
+              <li>1 Calendar</li>
             </ul>
-            <div class="pricing-button-container">
-              <a href=""><button class="pricing-button">SIGN UP</button></a>
+            <div class="bundle-button-container">
+              <a class="button" href="">Sign up</a>
             </div>
           </section>
-          <section class="pricing-tables">
-            <h1 class="pricing-header">STANDARD</h1>
+          <section class="bundle">
+            <h3>Standard</h3>
             <ul>
-              <li class="pricing-plan"><span class="pricing-cost">$10.99</span> /MONTH</li>
-              <li class="pricing-stats">7 Projects</li>
-              <li class="pricing-stats">5 Users</li>
-              <li class="pricing-stats">10 Gb User</li>
-              <li class="pricing-stats">5 Calendar</li>
+              <li class="bundle-plan"><span class="bundle-price">$10.99</span> /MONTH</li>
+              <li>7 Projects</li>
+              <li>5 Users</li>
+              <li>10 Gb User</li>
+              <li>5 Calendar</li>
             </ul>
-            <div class="pricing-button-container">
-              <a href=""><button class="pricing-button">SIGN UP</button></a>
+            <div class="bundle-button-container">
+              <a class="button" href="">Sign up</a>
             </div>
           </section>
-          <section class="pricing-tables">
-            <h1 class="pricing-header">PROFESSIONAL</h1>
+          <section class="bundle">
+            <h3>Professional</h3>
             <ul>
-              <li class="pricing-plan"><span class="pricing-cost">$25.99</span> /MONTH</li>
-              <li class="pricing-stats">15 Projects</li>
-              <li class="pricing-stats">50 Users</li>
-              <li class="pricing-stats">100 Gb User</li>
-              <li class="pricing-stats">25 Calendar</li>
+              <li class="bundle-plan"><span class="bundle-price">$25.99</span> /MONTH</li>
+              <li>15 Projects</li>
+              <li>50 Users</li>
+              <li>100 Gb User</li>
+              <li>25 Calendar</li>
             </ul>
-            <div class="pricing-button-container">
-              <a href=""><button class="pricing-button">SIGN UP</button></a>
+            <div class="bundle-button-container">
+              <a class="button" href="">Sign up</a>
             </div>
           </section>
-          <section class="pricing-tables">
-            <h1 class="pricing-header">PREMIUM</h1>
+          <section class="bundle">
+            <h3>Premium</h3>
             <ul>
-              <li class="pricing-plan"><span class="pricing-cost">$49.99</span> /MONTH</li>
-              <li class="pricing-stats">UNLIMITED Projects</li>
-              <li class="pricing-stats">UNLIMITED Users</li>
-              <li class="pricing-stats">1000 Gb User</li>
-              <li class="pricing-stats">UNLIMITED Calendar</li>
+              <li class="bundle-plan"><span class="bundle-price">$49.99</span> /MONTH</li>
+              <li>UNLIMITED Projects</li>
+              <li>UNLIMITED Users</li>
+              <li>1000 Gb User</li>
+              <li>UNLIMITED Calendar</li>
             </ul>
-            <div class="pricing-button-container">
-              <a href=""><button class="pricing-button">SIGN UP</button></a>
+            <div class="bundle-button-container">
+              <a class="button" href="">Sign up</a>
             </div>
           </section>
         </section>
-      </section>
+      </article>
       <article id="portfolio" class="portfolio-container section-arrows-orange">
         <div class="section-header-container">
           <svg height="3" width="50%">
