update to slider & download button styles
Create javascript folder and download button
partial. Update to components index file

--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
           </svg>
         </div>
         <div class="slider">
-          <figure id="first-slide">
-            <img class="mobile-slide" src="/img/slider-mobile.jpg" width="800" height="465" alt="image advertising Crispers iphone app" title="Crispers/Clouders app" aria-hidden="false">
-            <img class="desktop-slide" src="/img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Couders app" aria-hidden="true">
+          <figure id="first-slide" class="active-slide">
+            <img class="desktop-slide" src="/img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Couders app">
             <figcaption>
               <h3>Crispers</h3>
               <p>Nice, crispy and<br />creative landing page</p>
@@ -133,8 +132,7 @@
             </figcaption>
           </figure>
           <figure id="second-slide">
-            <img class="mobile-slide" src="/img/slider-mobile.jpg" width="800" height="465" alt="image advertising Crispers iphone app" title="Crispers/Clouders app" aria-hidden="false">
-            <img class="desktop-slide" src="/img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Couders app" aria-hidden="true">
+            <img class="desktop-slide" src="/img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Couders app">
             <figcaption>
               <h3>Crispers</h3>
               <p>Nice, crispy and<br />creative landing page</p>
@@ -417,5 +415,7 @@
         <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
       </ul>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
