Finalize header components

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     </header>
     <main>
       <article id="services" class="services-container section-arrows-white">
-        <div class="header-container">
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:3" />
+        <div class="primary-header-light">
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
           </svg>
-          <h1 class="primary-header-light">Services</h1>
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:3" />
+          <h1>Services</h1>
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
           </svg>
         </div>
         <p class="services-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
@@ -56,8 +56,17 @@
           </li>
         </ul>
         <section class="pricing">
-          <h2 class="sub-section-header">Pricing Tables</h2>
+          <div class="secondary-header-light">
+            <svg height="2" width="26%">
+              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
+            </svg>
+            <h2 class="pricing-tables-header">Pricing Tables</h2>
+            <svg height="2" width="26%">
+              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
+            </svg>
+          </div>
           <section class="bundle">
+<!-- Should be h1s in a new section? Also, text transforms needed -->
             <h3>Basic</h3>
             <ul>
               <li class="bundle-plan"><span>$5.99</span> /MONTH</li>
@@ -112,13 +121,13 @@
         </section>
       </article>
       <article id="portfolio" class="portfolio-container section-arrows-orange">
-        <div class="header-container">
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
+        <div class="primary-header-dark">
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
-          <h1 class="primary-header-dark">Portfolio</h1>
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
+          <h1>Portfolio</h1>
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
         </div>
         <div class="portfolio-slider">
@@ -225,69 +234,69 @@
 
       </article>
       <article id="about" class="about section-arrows-white">
-        <div class="header-container">
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
+        <div class="primary-header-light">
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
-          <h1 class="primary-header-light">About</h1>
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
+          <h1>About</h1>
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
         </div>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <section>
-          <div class="header-container">
+          <div class="secondary-header-light">
             <svg height="2" width="30%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
-            <h1 class="skills-sub-header">SKILLS</h1>
+            <h2>Skills</h2>
             <svg height="2" width="30%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
-        </div>
+          </div>
           <ul class="skills">
             <li>
-              <h2 class="progress-header">PHOTOSHOP</h2>
+              <h3 class="progress-header">Photoshop</h3>
               <progress value="77" max="100"></progress>
             </li>
             <li>
-              <h2 class="progress-header">HTML/CSS</h2>
+              <h3 class="progress-header">HTML/CSS</h3>
               <progress value="91" max="100"></progress>
             </li>
             <li>
-              <h2 class="progress-header">ILLUSTRATOR</h2>
+              <h3 class="progress-header">Illustrator</h3>
               <progress value="69" max="100"></progress>
             </li>
             <li>
-              <h2 class="progress-header">PHP</h2>
+              <h3 class="progress-header">PHP</h3>
               <progress value="55" max="100"></progress>
             </li>
             <li>
-              <h2 class="progress-header">WORDPRESS</h2>
+              <h3 class="progress-header">Wordpress</h3>
               <progress value="97.5" max="100"></progress>
             </li>
           </ul>
         </section>
         <aside>
-          <h1 class="join-us-header">Do you want to be one of Avengers? Join us!</h1>
-          <button class="contact-us-button">CONTACT US</button>
+          <h2 class="join-us-header">Do you want to be one of Avengers? Join us!</h2>
+          <button class="contact-us-button">Contact us</button>
         </aside>
       </article>
       <article id="team" class="team section-arrows-black">
-        <div class="header-container">
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
+        <div class="primary-header-dark">
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
-          <h1 class="primary-header-dark">Team</h1>
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:3" />
+          <h1>Team</h1>
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
         </div>
         <p class="team-text team-description-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <section class="team-profile">
-          <h1 class="profile-header">JONATHAN DOE</h1>
-          <h2 class="team-text profile-text">CEO, UI&amp;UX designer</h2>
+          <h2 class="profile-header">Jonathan Doe</h2>
+          <h3 class="team-text profile-text">CEO, UI&amp;UX designer</h3>
           <figure>
             <img src="/img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image circle">
             <figcaption>
@@ -303,8 +312,8 @@
           </figure>
         </section>
         <section class="team-profile">
-          <h1 class="profile-header">JANNETE DOE</h1>
-          <h2 class="team-text profile-text">Business &amp; marketing</h2>
+          <h2 class="profile-header">Jannete Doe</h2>
+          <h3 class="team-text profile-text">Business &amp; marketing</h3>
           <figure>
             <img src="/img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image circle">
             <figcaption>
@@ -320,8 +329,8 @@
           </figure>
         </section>
         <section class="team-profile">
-          <h1 class="profile-header">JANE ELLA DOE</h1>
-          <h2 class="team-text profile-text">UX specialist</h2>
+          <h2 class="profile-header">Jane Ella Doe</h2>
+          <h3 class="team-text profile-text">UX specialist</h3>
           <figure>
             <img src="/img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image circle">
             <figcaption>
@@ -337,8 +346,8 @@
           </figure>
         </section>
         <section class="team-profile">
-          <h1 class="profile-header">JESSIE DOE</h1>
-          <h2 class="team-text profile-text">Business and legacy</h2>
+          <h2 class="profile-header">Jessie Doe</h2>
+          <h3 class="team-text profile-text">Business and legacy</h3>
           <figure>
             <img src="/img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image circle">
             <figcaption>
@@ -354,14 +363,22 @@
           </figure>
         </section>
         <section class="clients">
-          <h1 class="client-sub-header">CLIENTS</h1>
+          <div class="secondary-header-dark">
+            <svg height="2" width="30%">
+              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
+            </svg>
+            <h2>Clients</h2>
+            <svg height="2" width="30%">
+              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
+            </svg>
+          </div>
           <button class="icon-chevron-left client-button circle"></button>
           <ul>
             <li>
               <figure class="client-figure">
                 <img src="/img/broderic.jpg" alt="Image of Matthew Broderic" title="Matthew Broderic" class="client-image circle">
                 <figcaption class="client-caption">
-                  <h2 class="team-header client-header"><span class="client-name">Matthew Broderic</span> (CEO Hopicola Inc.)</h2>
+                  <h3 class="team-header client-header"><span class="client-name">Matthew Broderic</span> (CEO Hopicola Inc.)</h3>
                   <p class="team-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard my text ever since the 1500s, when lorem upsum is the best text for you.</p>
                 </figcaption>
               </figure>
@@ -371,13 +388,13 @@
         </section>
       </article>
       <article id="contact" class="contact-section section-arrows-white">
-        <div class="header-container">
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:3" />
+        <div class="primary-header-light">
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
           </svg>
-          <h1 class="primary-header-light">Contact</h1>
-          <svg height="3" width="50%">
-             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:3" />
+          <h1>Contact</h1>
+          <svg height="2" width="50%">
+             <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
           </svg>
         </div>
         <p class="contact-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
