--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Avengers</title>
-    <meta name="description" content="Information about Avengers company and services that are provided">
+    <meta name="description" content="Information about Avengers company and services">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -29,11 +29,11 @@
     </header>
     <main>
       <article id="services" class="services-container section-arrows-white">
-        <div class="primary-header-light">
+        <div class="header-container">
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
           </svg>
-          <h1>Services</h1>
+          <h1 class="header-light">Services</h1>
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
           </svg>
@@ -56,11 +56,11 @@
           </li>
         </ul>
         <section class="pricing">
-          <div class="secondary-header-light">
+          <div class="header-container">
             <svg height="2" width="26%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
             </svg>
-            <h2 class="pricing-tables-header">Pricing Tables</h2>
+            <h2 class="header-light">Pricing Tables</h2>
             <svg height="2" width="26%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
             </svg>
@@ -121,11 +121,11 @@
         </section>
       </article>
       <article id="portfolio" class="portfolio-container section-arrows-orange">
-        <div class="primary-header-dark">
+        <div class="header-container">
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
-          <h1>Portfolio</h1>
+          <h1 class="header-dark">Portfolio</h1>
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
@@ -242,11 +242,11 @@
 
       </article>
       <article id="about" class="about section-arrows-white">
-        <div class="primary-header-light">
+        <div class="header-container">
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
-          <h1>About</h1>
+          <h1 class="header-light">About</h1>
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
@@ -254,133 +254,165 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <section>
-          <div class="secondary-header-light">
+          <div class="header-container">
             <svg height="2" width="30%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
-            <h2>Skills</h2>
+            <h2 class="header-light">Skills</h2>
             <svg height="2" width="30%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
           </div>
           <ul class="skills">
             <li>
-              <h3 class="progress-header">Photoshop</h3>
-              <progress value="77" max="100"></progress>
+              <figure>
+                <figcaption>
+                  <h3 class="progress-header">Photoshop</h3>
+                </figcaption>
+                <progress value="77" max="100"></progress>
+              </figure>
             </li>
             <li>
-              <h3 class="progress-header">HTML/CSS</h3>
-              <progress value="91" max="100"></progress>
+              <figure>
+                <figcaption>
+                  <h3 class="progress-header">HTML/CSS</h3>
+                </figcaption>
+                <progress value="91" max="100"></progress>
+              </figure>
             </li>
             <li>
-              <h3 class="progress-header">Illustrator</h3>
-              <progress value="69" max="100"></progress>
+              <figure>
+                <figcaption>
+                  <h3 class="progress-header">Illustrator</h3>
+                </figcaption>
+                <progress value="69" max="100"></progress>
+              </figure>
             </li>
             <li>
-              <h3 class="progress-header">PHP</h3>
-              <progress value="55" max="100"></progress>
+              <figure>
+                <figcaption>
+                  <h3 class="progress-header">PHP</h3>
+                </figcaption>
+                <progress value="55" max="100"></progress>
+              </figure>
             </li>
             <li>
-              <h3 class="progress-header">Wordpress</h3>
-              <progress value="97.5" max="100"></progress>
+              <figure>
+                <figcaption>
+                  <h3 class="progress-header">Wordpress</h3>
+                </figcaption>
+                <progress value="97.5" max="100"></progress>
+              </figure>
             </li>
           </ul>
         </section>
         <aside>
           <h2 class="join-us-header">Do you want to be one of Avengers? Join us!</h2>
-          <button class="contact-us-button">Contact us</button>
+          <a class="contact-us-button">Contact us</a>
         </aside>
       </article>
       <article id="team" class="team section-arrows-black">
-        <div class="primary-header-dark">
+        <div class="header-container">
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
-          <h1>Team</h1>
+          <h1 class="header-dark">Team</h1>
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
         </div>
         <p class="team-text team-description-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
-        <section class="team-profile">
-          <h2 class="profile-header">Jonathan Doe</h2>
-          <h3 class="team-text profile-text">CEO, UI&amp;UX designer</h3>
-          <figure>
-            <img src="/img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image circle">
-            <figcaption>
-              <ul class="social-icons">
-                <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
-                <li><a href="https://twitter.com" class="icon-twitter"></a></li>
-                <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
-                <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
-                <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
-              </ul>
-              <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
-            </figcaption>
-          </figure>
-        </section>
-        <section class="team-profile">
-          <h2 class="profile-header">Jannete Doe</h2>
-          <h3 class="team-text profile-text">Business &amp; marketing</h3>
-          <figure>
-            <img src="/img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image circle">
-            <figcaption>
-              <ul class="social-icons">
-                <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
-                <li><a href="https://twitter.com" class="icon-twitter"></a></li>
-                <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
-                <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
-                <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
-              </ul>
-              <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
-            </figcaption>
-          </figure>
-        </section>
-        <section class="team-profile">
-          <h2 class="profile-header">Jane Ella Doe</h2>
-          <h3 class="team-text profile-text">UX specialist</h3>
-          <figure>
-            <img src="/img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image circle">
-            <figcaption>
-              <ul class="social-icons">
-                <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
-                <li><a href="https://twitter.com" class="icon-twitter"></a></li>
-                <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
-                <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
-                <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
-              </ul>
-              <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
-            </figcaption>
-          </figure>
-        </section>
-        <section class="team-profile">
-          <h2 class="profile-header">Jessie Doe</h2>
-          <h3 class="team-text profile-text">Business and legacy</h3>
-          <figure>
-            <img src="/img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image circle">
-            <figcaption>
-              <ul class="social-icons">
-                <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
-                <li><a href="https://twitter.com" class="icon-twitter"></a></li>
-                <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
-                <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
-                <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
-              </ul>
-              <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
-            </figcaption>
-          </figure>
-        </section>
+        <ul>
+          <li class="team-profile">
+            <h2 class="profile-header">Jonathan Doe</h2>
+            <h3 class="team-text profile-text">CEO, UI&amp;UX designer</h3>
+            <figure>
+              <img src="/img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image circle">
+              <figcaption>
+                <ul class="social-icons">
+                  <li>
+                    <a href="https://www.facebook.com" class="icon-facebook"><span class="screen-reader-only">Friend me on Facebook</span></a>
+                  </li>
+                  <li>
+                    <a href="https://twitter.com" class="icon-twitter"><span class="screen-reader-only">Friend me on Twitter</span></a>
+                  </li>
+                  <li>
+                    <a href="https://dribbble.com" class="icon-dribbble"><span class="screen-reader-only">Friend me on Dribbble</span></a>
+                  </li>
+                  <li>
+                    <a href="https://www.linkedin.com" class="icon-linkedin2"><span class="screen-reader-only">Friend me on LinkedIn</span></a>
+                  </li>
+                  <li>
+                    <a href="https://plus.google.com" class="icon-google-plus"><span class="screen-reader-only">Friend me on Google+</span></a>
+                  </li>
+                </ul>
+                <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="team-profile">
+            <h2 class="profile-header">Jannete Doe</h2>
+            <h3 class="team-text profile-text">Business &amp; marketing</h3>
+            <figure>
+              <img src="/img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image circle">
+              <figcaption>
+                <ul class="social-icons">
+                  <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
+                  <li><a href="https://twitter.com" class="icon-twitter"></a></li>
+                  <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
+                  <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
+                  <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+                </ul>
+                <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="team-profile">
+            <h2 class="profile-header">Jane Ella Doe</h2>
+            <h3 class="team-text profile-text">UX specialist</h3>
+            <figure>
+              <img src="/img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image circle">
+              <figcaption>
+                <ul class="social-icons">
+                  <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
+                  <li><a href="https://twitter.com" class="icon-twitter"></a></li>
+                  <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
+                  <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
+                  <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+                </ul>
+                <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="team-profile">
+            <h2 class="profile-header">Jessie Doe</h2>
+            <h3 class="team-text profile-text">Business and legacy</h3>
+            <figure>
+              <img src="/img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image circle">
+              <figcaption>
+                <ul class="social-icons">
+                  <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
+                  <li><a href="https://twitter.com" class="icon-twitter"></a></li>
+                  <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
+                  <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
+                  <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+                </ul>
+                <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
         <section class="clients">
-          <div class="secondary-header-dark">
+          <div class="header-container">
             <svg height="2" width="30%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
-            <h2>Clients</h2>
+            <h2 class="header-dark">Clients</h2>
             <svg height="2" width="30%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
           </div>
-          <button class="icon-chevron-left client-button circle"></button>
+          <a class="icon-chevron-left client-button circle"></a>
           <ul>
             <li>
               <figure class="client-figure">
@@ -392,15 +424,15 @@
               </figure>
             </li>
           </ul>
-          <button class="icon-chevron-right client-button circle"></button>
+          <a class="icon-chevron-right client-button circle"></a>
         </section>
       </article>
       <article id="contact" class="contact-section section-arrows-white">
-        <div class="primary-header-light">
+        <div class="header-container">
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
           </svg>
-          <h1>Contact</h1>
+          <h1 class="header-light">Contact</h1>
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
           </svg>
@@ -425,11 +457,21 @@
     <footer>
       <p>Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012</span></p>
       <ul class="social-icons">
-        <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
-        <li><a href="https://twitter.com" class="icon-twitter"></a></li>
-        <li><a href="https://dribbble.com" class="icon-dribbble"></a></li>
-        <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
-        <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
+        <li>
+          <a href="https://www.facebook.com" class="icon-facebook"><span class="screen-reader-only">Friend us on Facebook</span></a>
+        </li>
+        <li>
+          <a href="https://twitter.com" class="icon-twitter"><span class="screen-reader-only">Friend us on Twitter</span></a>
+        </li>
+        <li>
+          <a href="https://dribbble.com" class="icon-dribbble"><span class="screen-reader-only">Friend us on Dribbble</span></a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com" class="icon-linkedin2"><span class="screen-reader-only">Friend us on LinkedIn</span></a>
+        </li>
+        <li>
+          <a href="https://plus.google.com" class="icon-google-plus"><span class="screen-reader-only">Friend us on Google+</span></a>
+        </li>
       </ul>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
